--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ html {
 *::after,
 *::before {
   box-sizing: inherit;
-  outline: 2px solid red;
 }
 body {
   font-family: "Roboto", sans-serif;
@@ -17,6 +16,9 @@ a {
 ul {
   list-style: none;
 }
+:root {
+  --webfont: "Raleway";
+}
 /* Top-line(nav) */
 .top-line {
   display: flex;
@@ -27,12 +29,12 @@ ul {
   margin-bottom: 0px;
 }
 .webstudio-1 {
-  font-family: "Raleway", sans-serif;
+  font-family: var(--webfont);
   font-weight: 700;
   font-style: normal;
   font-size: 26px;
   line-height: 31px;
-  width: 145px;
+  min-width: 145px;
   height: 31px;
   margin-left: 215px;
   margin-top: 24px;
@@ -44,6 +46,7 @@ ul {
   display: flex;
   flex-direction: row;
 }
+
 .studio {
   width: 49px;
   height: 16px;
@@ -109,34 +112,105 @@ ul {
   height: 1360px;
   margin: 94px 215px;
 }
-.buttons li {
+.main li {
   display: inline-block;
+}
+.buttons {
+  width: 611px;
+  height: 54px;
+  margin: 0px 279px 0 280px;
+  padding-left: 0px;
+}
+.main button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #f5f4fa;
+  border: 0px solid #fff;
+}
+.main button:hover,
+.main button:focus {
+  background-color: #2196f3;
+  color: #fff;
+}
+.li-1 {
+  width: 73px;
+  height: 38px;
 }
 .button-1 {
   width: 73px;
   height: 38px;
-  background-color: #f5f4fa;
-}
-.button-1:hover {
-  background-color: #2196f3;
-  color: #fff;
-}
-.button-1-text {
-  color: #fff;
-  padding: 0px;
-  margin: 6px 22px 6px 22px;
-  width: 29px;
-  height: 26px;
+  margin: 0px 8px 16px 0px;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 26px;
   text-align: center;
   letter-spacing: 0.03em;
-  color: #212121;
+  padding: 6px 22px;
 }
-.button-1-text:hover {
-  color: #fff;
+.li-2 {
+  width: 128px;
+  height: 38px;
+}
+.button-2 {
+  width: 128px;
+  height: 38px;
+  margin: 0px 8px 16px 8px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  padding: 5px 20px;
+}
+.li-3 {
+  width: 145px;
+  height: 38px;
+}
+.button-3 {
+  width: 145px;
+  height: 38px;
+  margin: 0px 8px 16px 8px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  padding: 6px 22px;
+}
+.li-4 {
+  width: 103px;
+  height: 38px;
+}
+.button-4 {
+  width: 103px;
+  height: 38px;
+  margin: 0px 8px 16px 8px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  padding: 6px 22px;
+}
+.li-5 {
+  width: 130px;
+  height: 38px;
+}
+.button-5 {
+  width: 130px;
+  height: 38px;
+  margin: 0px 0px 16px 8px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 26px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  padding: 6px 22px;
 }
 /* Подвал */
 .footer {
