--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ html {
   box-sizing: inherit;
   margin: 0px;
   padding: 0px;
+  /* outline: 2px solid; */
 }
 div {
   margin: 0px;
@@ -16,7 +17,6 @@ body {
 }
 a {
   text-decoration: none;
-  display: inline-block;
 }
 ul {
   list-style: none;
@@ -28,7 +28,6 @@ ul {
 }
 p,
 h3 {
-  display: inline-block;
   margin: 0px;
 }
 img {
@@ -75,9 +74,12 @@ img {
   font-size: 14px;
   line-height: 16px;
   color: #212121;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-sizing: content-box;
 }
-.studio:hover {
+.studio:hover,
+.studio:focus {
   color: #2196f3;
 }
 .studio::after {
@@ -91,7 +93,8 @@ img {
   border-radius: 2px;
   background-color: var(--blue-color);
 }
-.studio:hover::after {
+.studio:hover::after,
+.studio:focus::after {
   opacity: 1;
 }
 .portfolio {
@@ -103,8 +106,11 @@ img {
   line-height: 16px;
   color: #212121;
   box-sizing: content-box;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio:hover {
+.portfolio:hover,
+.portfolio:focus {
   color: #2196f3;
 }
 .portfolio::after {
@@ -118,7 +124,8 @@ img {
   border-radius: 2px;
   background-color: var(--blue-color);
 }
-.portfolio:hover::after {
+.portfolio:hover::after,
+.portfolio:focus::after {
   opacity: 1;
 }
 .contacts {
@@ -129,8 +136,11 @@ img {
   font-size: 14px;
   line-height: 16px;
   color: #212121;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contacts:hover {
+.contacts:hover,
+.contacts:focus {
   color: #2196f3;
 }
 .contacts::after {
@@ -144,6 +154,7 @@ img {
   border-radius: 2px;
   background-color: var(--blue-color);
 }
+.contacts:focus::after,
 .contacts:hover::after {
   opacity: 1;
 }
@@ -159,6 +170,8 @@ img {
   letter-spacing: 0.02em;
   display: flex;
   flex-wrap: nowrap;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .svg-message {
   width: 16px;
@@ -168,10 +181,12 @@ img {
   margin: 2px 10px 0 0;
 }
 
-.mail-a:hover .svg-message {
+.mail-a:hover .svg-message,
+.mail-a:focus .svg-message {
   fill: #2196f3;
 }
-.mail-a:hover {
+.mail-a:hover,
+.mail-a:focus {
   color: #2196f3;
 }
 .svg-tel {
@@ -192,22 +207,22 @@ img {
   letter-spacing: 0.02em;
   display: flex;
   flex-wrap: nowrap;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.tel-a:hover {
+.tel-a:hover,
+.tel-a:focus {
   color: #2196f3;
 }
-.tel-a:hover .svg-tel {
+.tel-a:hover .svg-tel,
+.tel-a:focus .svg-tel {
   fill: #2196f3;
 }
-/*  Main   */
+/*      Main      */
 .main {
   width: 1170px;
-
   height: 1400px;
   margin: 94px 215px;
-}
-.main li {
-  display: inline-block;
 }
 /* Main > Buttons */
 .buttons {
@@ -215,12 +230,17 @@ img {
   height: 54px;
   margin: 0px 279px 0 280px;
   padding-left: 0px;
+  display: flex;
+  justify-content: space-between;
 }
-.main button {
-  display: inline-block;
+.button {
+  display: flex;
   border-radius: 4px;
   background-color: #f5f4fa;
   border: 0px solid #fff;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 .main button:hover,
 .main button:focus {
@@ -308,18 +328,18 @@ img {
   padding: 6px 22px;
 }
 /* Main > imges */
-.section a {
-  max-height: 404px;
-}
-.section li:hover {
+.img-conteiner:hover,
+.img-conteiner:focus {
   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%), 0px 4px 4px rgb(0 0 0 / 6%),
     1px 4px 6px rgb(0 0 0 / 16%);
 }
 .section {
   width: 1170px;
   height: 1360px;
+  margin-top: 34px;
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
 .section li {
   width: 370px;
@@ -330,7 +350,9 @@ img {
   height: 294px;
 }
 .black-content {
-  position: relative;
+  position: absolute;
+  width: 370px;
+  height: 294px;
 }
 .black-content-p {
   position: absolute;
@@ -338,7 +360,6 @@ img {
   align-items: center;
   width: 370px;
   height: 294px;
-  margin: 0px 0px 115px 0px;
   padding: 0 24px 0 24px;
   bottom: 0px;
   opacity: 0;
@@ -349,36 +370,13 @@ img {
   line-height: 28px;
   letter-spacing: 0.03em;
   color: #ffffff;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.section li:hover .black-content-p {
+.img-conteiner:hover .black-content-p,
+.img-conteiner:focus .black-content-p {
   opacity: 0.9;
-}
-.img-conteiner-1 {
-  margin: 34px 15px 15px 0px;
-}
-.img-conteiner-2 {
-  margin: 34px 15px 15px 15px;
-}
-.img-conteiner-3 {
-  margin: 34px 0px 15px 15px;
-}
-.img-conteiner-4 {
-  margin: 15px 15px 15px 0px;
-}
-.img-conteiner-5 {
-  margin: 15px 15px 15px 15px;
-}
-.img-conteiner-6 {
-  margin: 15px 0px 15px 15px;
-}
-.img-conteiner-7 {
-  margin: 15px 15px 0px 0px;
-}
-.img-conteiner-8 {
-  margin: 15px 15px 0px 15px;
-}
-.img-conteiner-9 {
-  margin: 15px 0px 0px 15px;
+  box-shadow: 0px 1px 1px rgb(0 0 0 / 12%), 0px 4px 4px rgb(0 0 0 / 6%),
+    1px 4px 6px rgb(0 0 0 / 16%);
 }
 .section .h3-special {
   width: 330px;
@@ -475,8 +473,10 @@ img {
   color: rgba(255, 255, 255, 0.6);
   margin-bottom: 9px;
   display: flex;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.f-mail:hover {
+.f-mail:hover,
+.f-mail:focus {
   color: #2196f3;
 }
 .f-tel {
@@ -489,8 +489,10 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   display: flex;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.f-tel:hover {
+.f-tel:hover,
+.f-tel:focus {
   color: #2196f3;
 }
 .f-contacts-tel {
@@ -542,11 +544,14 @@ img {
   align-items: center;
   background-color: #44454e;
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-svg-link:hover {
+.footer-svg-link:hover,
+.footer-svg-link:focus {
   background-color: #2196f3;
 }
-.footer-svg-link:hover {
+.footer-svg-link:hover,
+.footer-svg-link:focus {
   fill: #fff;
 }
 .footer-svg {
